# Open-Source-Projects

./: .gitignore  README.md  api.py  app.py  pyproject.toml  report.md  requirements.txt
src/open_source/: crew.py  main.py
src/open_source/config/: agents.yaml  tasks.yaml
src/open_source/tools/: custom_tool.py
