[project]
name = "open_source"
version = "0.1.0"
description = "open_source using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
open_source = "open_source.main:run"
run_crew = "open_source.main:run"
train = "open_source.main:train"
replay = "open_source.main:replay"
test = "open_source.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
